@@ -13,6 +13,8 @@ Features added
 Bugs fixed
 ----------
 
+* ``iterparse()`` could crash on long XML files
+
 * Setting an attribute to a non-string value did not raise an exception
 
 * Element.remove() deleted the tail text from the removed Element
